THRIFT-3636 Double precision is not fully preserved in C++ TJSONProtocol Client: C++ Patch: Wang Yaofu

This closes #870